--- a/src/Components/About/AboutPage.styles.scss
+++ b/src/Components/About/AboutPage.styles.scss
@@ -1,3 +1,6 @@
+$bg-secondary: #fff;
+$bg-primary: #f08a98;
+
 .about-container{
     margin-top: 5%;
 }
@@ -21,6 +24,7 @@
 .about-body{
     margin-top:20px;
     margin: 50px;
+    color: $bg-secondary;
 }
 
 @media only screen and (max-width:768px) {
