--- a/src/Components/Project/Project.styles.scss
+++ b/src/Components/Project/Project.styles.scss
@@ -2,7 +2,7 @@ $font-size-base: 0.9rem !default;
 $font-family-sans-serif: "Roboto",
 sans-serif !default;
 $bg-secondary: #fff;
-$bg-primary: #f08a98; 
+$bg-primary: #f08a98;
 
 
 
@@ -11,7 +11,7 @@ $bg-primary: #f08a98;
     padding-bottom: 10%;
     background-color: $bg-secondary;
 
-       
+
 }
 
 .project-title {
@@ -43,7 +43,8 @@ $bg-primary: #f08a98;
 
 .project-tools {
 
-    color: #c3557a;;
+    color: #c3557a;
+    ;
     text-align: center;
 }
 
@@ -58,21 +59,22 @@ $bg-primary: #f08a98;
 .view-project {
 
     color: $bg-primary;
-    font-size: 20px;
+    font-size: 17px;
     font-weight: bold;
     text-align: center;
     background-color: #f3eded;
     border-radius: 5px;
     margin: 0 auto;
     width: 15vw;
+    padding: 10px;
 
 
 }
 
-.project-link{
+.project-link {
     display: inline-block;
     margin: 20px !important;
-    margin: 0 auto;
+
 }
 
 
@@ -91,19 +93,27 @@ a:hover {
 
 
 @media only screen and (max-width:991px) {
-    .project-link{
+    .project-link {
         display: inline-block;
-        margin: 20px !important;
-  
+        margin: 14% !important;
+ 
+
     }
 
 }
 
 
-@media only screen and (max-width:768px) {
+@media only screen and (max-width:778px) {
     .view-project {
 
         width: 37vw !important;
+        font-size: 17px  !important;
+
+    }
+    .project-link {
+        display: inline-block;
+        margin: 7px !important;
+        margin-left: 28% !important;
 
     }
 
@@ -113,6 +123,13 @@ a:hover {
     .view-project {
 
         width: 42vw;
+        font-size: 15px;
+
+    }
+    .project-link {
+        display: inline-block;
+        margin: 5px !important;
+        margin-left: 28% !important;
 
     }
 
