--- a/src/Components/Project/Project.styles.scss
+++ b/src/Components/Project/Project.styles.scss
@@ -18,6 +18,7 @@ $bg-primary: #f08a98;
     padding-top: 8%;
     color: $bg-primary;
     text-align: center;
+    font-family: 'Yellowtail', cursive;
 }
 
 
@@ -44,7 +45,6 @@ $bg-primary: #f08a98;
 .project-tools {
 
     color: #c3557a;
-    ;
     text-align: center;
 }
 
@@ -96,7 +96,7 @@ a:hover {
     .project-link {
         display: inline-block;
         margin: 14% !important;
- 
+
 
     }
 
@@ -107,9 +107,10 @@ a:hover {
     .view-project {
 
         width: 37vw !important;
-        font-size: 17px  !important;
+        font-size: 17px !important;
 
     }
+
     .project-link {
         display: inline-block;
         margin: 7px !important;
@@ -126,6 +127,7 @@ a:hover {
         font-size: 15px;
 
     }
+
     .project-link {
         display: inline-block;
         margin: 5px !important;
